force-app/main/default/objects/AKILI_Insights_API__mdt/AKILI_Insights_API__mdt.object-meta.xml
<CustomObject>
    <description>Authentication: To get authentication, Create Insight Actions: this API will use to create insight actions to akili DB, Get Insights: This API will create insight in SF which are pulled from akili. NOTE: Don&apos;t change the developer name for the metadata records and metadata fields as those are used in the apex. If the certificate expires then update the certificate key in Metadata Records And in IBM DataPower applicate. which gives client id and secret needs to update back to the metadata records.</description>
    <label>AKILI Insights API</label>
    <pluralLabel>AKILI Insights APIs</pluralLabel>
</CustomObject>