force-app/main/default/objects/AKILI_Insights_API__mdt/fields/Certificate_Key__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Key__c</fullName>
    <label>Certificate Key</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>