force-app/main/default/objects/AKILI_Insights_API__mdt/fields/param_lastupdated__c.field-meta.xml
<CustomField>
    <fullName>param_lastupdated__c</fullName>
    <label>param_lastupdated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>