force-app/main/default/objects/AKILI_Insights_API__mdt/fields/x_api_type__c.field-meta.xml
<CustomField>
    <fullName>x_api_type__c</fullName>
    <description>Note: Before changing the value for xapi type in get API please check the code to ensure the parameter format is correct and its not mismatched.</description>
    <inlineHelpText>Note: Before changing the value for xapi type in get API please check the code to ensure the parameter format is correct and its not mismatched.</inlineHelpText>
    <label>x-api-type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>