force-app/main/default/objects/AKILI_Insights_API__mdt/fields/x_apigw_api_id__c.field-meta.xml
<CustomField>
    <fullName>x_apigw_api_id__c</fullName>
    <label>x-apigw-api-id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>