force-app/main/default/objects/AKILI_Insights_API__mdt/fields/x_fapi_interaction_id__c.field-meta.xml
<CustomField>
    <fullName>x_fapi_interaction_id__c</fullName>
    <label>x-fapi-interaction-id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>